# AgenticAI_lab

./: README.md  main.py  pyproject.toml
1-LangGraph Basics/: 1-simplegraph.ipynb  1.4-ChatborWithMultipleTools.ipynb
2-Workflows/: 1-prompt-chaining.ipynb  2-parallelization.ipynb
3-HumanIntheLoop/: 3.1-HumanIntheLoop.ipynb
4-AgenticRAG/: 4.1-AgenticRag.ipynb
Workflows/: 3-evaluator-optimizer.ipynb
