[project]
name = "agenticai-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.3.1",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.5",
    "langchain-groq>=1.0.1",
    "langchain-openai>=1.1.7",
    "langchain-tavily>=0.2.13",
    "langchainhub>=0.1.21",
    "langgraph>=1.0.3",
    "wikipedia>=1.4.0",
]
